--- a/nixSitioWeb/package.json
+++ b/nixSitioWeb/package.json
@@ -19,7 +19,13 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
+    "@types/chart.js": "^2.7.40",
+    "angular-highcharts": "^7.0.2",
+    "canvasjs": "^1.8.1",
+    "chart.js": "^2.7.3",
     "core-js": "^2.5.5",
+    "highcharts": "^6.2.0",
+    "ng2-charts": "^1.6.0",
     "rxjs": "^6.1.0",
     "zone.js": "^0.8.26"
   },
